--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,7 @@ html {
   padding: 0;
   scroll-behavior: smooth;
   background-color: #f4f2fa;
+  overflow-x: hidden;
 }
 html body {
   background-color: #f4f2fa;
@@ -49,11 +50,17 @@ html body::-webkit-scrollbar {
 
 @media (min-width: 1024px) {
   header {
+    position: fixed;
+    top: 0.1;
+    left: 0;
+    width: 100%;
     height: 55px;
+    z-index: 999;
+    margin-top: -30px;
     background: rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(9px);
+    -webkit-backdrop-filter: blur(9px);
     border: 1px solid rgba(255, 255, 255, 0.3);
   }
   header nav {
@@ -132,26 +139,9 @@ html body::-webkit-scrollbar {
   header nav ul:last-child li:last-child {
     margin-right: 0;
   }
-  #contenedor-letras {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: start;
-    align-items: center;
-    width: 3em;
-    margin-top: 25px;
-    margin-left: 25px;
-  }
-  #contenedor-letras img {
-    width: 125%;
-    height: 75px;
-    margin-right: 15px;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-  #contenedor-letras img:last-child {
-    margin-right: 0;
+  h1,
+h2 {
+    font-family: "SFB", sans-serif;
   }
   .contenedor-producto {
     display: flex;
@@ -211,5 +201,69 @@ html body::-webkit-scrollbar {
     font-family: "SFB", sans-serif;
     font-size: 18px;
     margin-left: 75px;
+  }
+  strong {
+    font-family: "SFB", sans-serif;
+  }
+  .anuncios-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    background: rgb(254, 200, 200);
+    background: linear-gradient(45deg, rgb(254, 200, 200) 0%, rgb(255, 199, 235) 25%, rgb(254, 154, 255) 75%, rgb(129, 119, 250) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fec8c8", endColorstr="#8177fa", GradientType=1);
+    border: none;
+    border-radius: 0;
+    height: 25px;
+    padding: 0;
+    padding-top: 1px;
+    color: #212529;
+    text-align: center;
+    font-size: 14px;
+  }
+  .anuncios-header .btn-close {
+    padding: 0;
+    margin-top: 5px;
+    margin-right: 15px;
+    width: 0.9rem;
+    height: 0.9rem;
+  }
+  footer {
+    background-color: #f1edf5;
+    padding: 10px 0;
+  }
+  footer hr {
+    margin: 0 150px;
+  }
+  footer nav {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: start;
+  }
+  footer nav ul {
+    margin: 10px 0;
+    list-style-type: none;
+    font-family: "SFB", sans-serif;
+    font-size: 14px;
+  }
+  footer nav ul li {
+    font-family: "Inter", sans-serif;
+    margin-top: 2.5px;
+  }
+  footer nav ul li a {
+    text-decoration: none;
+    color: #212529;
+  }
+  footer nav ul li a:hover {
+    text-decoration: underline;
+    color: #212529;
+  }
+  .enlace-decorado {
+    text-decoration: none;
+    font-family: "SF", sans-serif;
+    font-size: 21px;
   }
 }/*# sourceMappingURL=styles.css.map */
