--- a/sass/media/_desktop.scss
+++ b/sass/media/_desktop.scss
@@ -1,12 +1,21 @@
 @media (min-width: $desktop) {
 
     header {
+        position: fixed;
+        top: .1;
+        left: 0;
+        width: 100%;
         height: 55px;
+        z-index: 999;
+        margin-top: -30px;
+
         background: rgba(255, 255, 255, 0.2);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(9px);
+        -webkit-backdrop-filter: blur(9px);
         border: 1px solid rgba(255, 255, 255, 0.3);
+
+
 
         nav {
             display: flex;
@@ -123,27 +132,11 @@
         }
     }
 
-    #contenedor-letras {
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: start;
-        align-items: center;
-
-        width: 3em;
-        margin-top: 25px;
-        margin-left: 25px;
-
-        img {
-            width: 125%;
-            height: 75px;
-            margin-right: 15px;
-            user-select: none;
-        }
-
-        img:last-child {
-            margin-right: 0;
-        }
+    h1,
+    h2 {
+        font-family: 'SFB', sans-serif;
     }
+
 
     .contenedor-producto {
         display: flex;
@@ -223,5 +216,89 @@
         font-size: 18px;
 
         margin-left: 75px;
+    }
+
+    strong {
+        font-family: 'SFB', sans-serif;
+    }
+
+    .anuncios-header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 999;
+
+        background: rgb(254, 200, 200);
+        background: -moz-linear-gradient(45deg, rgba(254, 200, 200, 1) 0%, rgba(255, 199, 235, 1) 25%, rgba(254, 154, 255, 1) 75%, rgba(129, 119, 250, 1) 100%);
+        background: -webkit-linear-gradient(45deg, rgba(254, 200, 200, 1) 0%, rgba(255, 199, 235, 1) 25%, rgba(254, 154, 255, 1) 75%, rgba(129, 119, 250, 1) 100%);
+        background: linear-gradient(45deg, rgba(254, 200, 200, 1) 0%, rgba(255, 199, 235, 1) 25%, rgba(254, 154, 255, 1) 75%, rgba(129, 119, 250, 1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fec8c8", endColorstr="#8177fa", GradientType=1);
+
+        border: none;
+        border-radius: 0;
+        height: 25px;
+        padding: 0;
+        padding-top: 1px;
+
+        color: #212529;
+        text-align: center;
+        font-size: 14px;
+
+
+        .btn-close {
+            padding: 0;
+            margin-top: 5px;
+            margin-right: 15px;
+            width: 0.9rem;
+            height: 0.9rem;
+        }
+    }
+
+    footer {
+        background-color: #f1edf5;
+
+        padding: 10px 0;
+
+        hr {
+            margin: 0 150px;
+        }
+
+        nav {
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-evenly;
+            align-items: start;
+
+            ul {
+                margin: 10px 0;
+
+
+                list-style-type: none;
+                font-family: 'SFB', sans-serif;
+                font-size: 14px;
+
+                li {
+                    font-family: 'Inter', sans-serif;
+                    margin-top: 2.5px;
+
+                    a {
+                        text-decoration: none;
+                        color: #212529
+                    }
+
+                    a:hover {
+                        text-decoration: underline;
+                        color: #212529
+                    }
+                }
+            }
+        }
+    }
+
+    .enlace-decorado {
+        text-decoration: none;
+        font-family: 'SF', sans-serif;
+        font-size: 21px;
     }
 }
